--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = censor
-description = 
-depends = 
-optional_depends = 
+description = chat censoring mod
+depends = default
+optional_depends = ?
